@@ -6,6 +6,7 @@ systemd (217-3ubuntu1) UNRELEASED; urgency=medium
       /etc/writable/ instead.
     - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
       upgrades, and we already have the automatic per-file symlinking.
+    - debian/rules: Add an epoch to libgudev.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 01 Dec 2014 15:41:09 +0100
 
